# pm

./: .gitignore  CLAUDE.md  Dockerfile
backend/: main.py  pyproject.toml
backend/tests/: test_main.py
docs/: PLAN.md
frontend/src/app/: page.tsx
frontend/src/components/: AuthWrapper.tsx  KanbanBoard.tsx  LoginPage.tsx
frontend/src/lib/: api.ts
pm/: AGENTS.md
pm/backend/: AGENTS.md  db.py  main.py  pyproject.toml  schema.sql  service.py
pm/backend/tests/: test_main.py
pm/docs/: codereview.md  schema.md  schema.sql
pm/frontend/: AGENTS.md  next.config.ts  playwright.config.ts
pm/frontend/src/components/: AISidebar.test.tsx  AISidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LoginPage.tsx  NewCardForm.tsx
pm/frontend/src/lib/: api.ts
pm/frontend/src/test/: setup.ts
pm/frontend/tests/: kanban.spec.ts
pm/scripts/: start.bat  start.ps1  start.sh  stop.ps1
scripts/: AGENTS.md  start.bat  start.ps1  start.sh  stop.bat  stop.sh
